# cryptopred

./: .dockerignore  .gitignore  .gitleaks.toml  .kube-linter.yaml  .pre-commit-config.yaml  .secrets.baseline  .vulture_whitelist.py  .yamllint.yaml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: security.yaml
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: README.md  apply-risingwave-schemas.sh  create_cluster.sh  deploy-lunarcrush.sh  deploy-news-sentiment.sh  deploy-news.sh  deploy-prediction-api.sh  deploy-predictor.sh  install-grafana.sh  install-mlflow.sh  install-risingwave.sh  install_kafka.sh  install_kafka_ui.sh  kind-with-portmapping.yaml  port-forward.sh  run-backfill.sh  stop-backfill.sh  stop-cluster.sh  test-e2e-dataflow.sh
deployments/dev/kind/backfill/: candles-historical-deployment.yaml  configmap.yaml  kustomization.yaml  technical-indicators-historical-deployment.yaml  trades-historical-deployment.yaml
deployments/dev/kind/manifests/: kafka-ui.yaml  kafka.yaml
deployments/dev/kind/manifests/grafana/: dashboard.yaml  datasource.yaml  ml-dashboard.yaml  values.yaml
deployments/dev/kind/manifests/lunarcrush/: deployment.yaml  kustomization.yaml
deployments/dev/kind/manifests/mlflow/: deployment.yaml  mlflow-minio-secret.yaml  values.yaml
deployments/dev/kind/manifests/news/: deployment.yaml
deployments/dev/kind/manifests/news-sentiment/: deployment.yaml
deployments/dev/kind/manifests/prediction-api/: deployment.yaml  kustomization.yaml  service.yaml
deployments/dev/kind/manifests/predictor/: configmap.yaml  kustomization.yaml  prediction-deployment.yaml  training-cronjob.yaml
deployments/dev/kind/manifests/risingwave/: values.yaml
deployments/dev/kind/manifests/risingwave/schemas/: 001_trades.sql  002_candles.sql  003_technical_indicators.sql  004_materialized_views.sql  005_predictions.sql  006_lunarcrush.sql  news.sql
deployments/dev/technical-indicators/: technical-indicators.yaml
deployments/dev/trades/: trades.yaml
docker/: Dockerfile.service
docs/: technical.md  user-guide.md
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: __init__.py  config.py  main.py
services/candles/tests/: conftest.py  test_candles.py  test_config.py
services/lunarcrush/: Dockerfile  README.md  pyproject.toml
services/lunarcrush/src/lunarcrush/: __init__.py  client.py  config.py  main.py  models.py
services/lunarcrush/tests/: __init__.py  conftest.py  test_client.py
services/news/: pyproject.toml
services/news-sentiment/: pyproject.toml
services/news-sentiment/src/news_sentiment/: __init__.py  config.py  main.py  models.py  openai_client.py
services/news/src/news/: __init__.py  config.py  cryptopanic.py  main.py  models.py
services/prediction-api/: .env.example  Cargo.toml  Dockerfile
services/prediction-api/src/: config.rs  db.rs  error.rs  main.rs
services/prediction-api/src/routes/: health.rs  mod.rs  predictions.rs
services/predictor/: pyproject.toml  settings.env
services/predictor/src/predictor/: __init__.py  config.py  data_validation.py  drift.py  features.py  model_registry.py  models.py  predict.py  train.py
services/predictor/tests/: __init__.py  conftest.py  test_data_validation.py  test_drift.py  test_features.py  test_models.py
services/technical-indicators/: README.md  indicators.yaml  pyproject.toml  settings.env
services/technical-indicators/src/technical_indicators/: __init__.py  config.py  indicators.py  main.py  state.py
services/technical-indicators/tests/: conftest.py  test_config.py  test_indicators.py  test_state.py
services/trades/: pyproject.toml
services/trades/src/trades/: __init__.py  binance_client.py  config.py  main.py  trade.py
services/trades/tests/: __init__.py  conftest.py  test_binance_client.py  test_config.py  test_main.py  test_trade.py
