[project]
name = "crypto-predictor-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "quixstreams",
    "pydantic",
    "pydantic-settings",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
]

[tool.uv.workspace]
members = [
    "services/trades",
    "services/candles",
    "services/technical-indicators",
]

[tool.uv.sources]
trades = { workspace = true }
candles = { workspace = true }
technical-indicators = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
