[project]
name = "news-sentiment"
version = "0.1.0"
description = "News sentiment analysis using OpenAI"
requires-python = ">=3.12"
dependencies = [
    "quixstreams>=3.0",
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
]

[project.scripts]
news-sentiment = "news_sentiment.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_sentiment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
