[project]
name = "news"
version = "0.1.0"
description = "Crypto news collector from Cryptopanic API"
requires-python = ">=3.12"
dependencies = [
    "quixstreams>=3.0",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
]

[project.scripts]
news = "news.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
